# dataset_CR_dynamics

./: .gitignore  CMakeLists.txt  NOTES RUN CODES.txt  Vicon_py_v2.py  analyze_ati_noise.py  analyze_data.py  compile.bat  data_fbgs.m  matrix_client_test.py  matrix_data_server.py  motor_position_tension_control.py  motor_positions.csv  motor_pretension.py  plot_6dof_interactive.py  plot_tension_trajectories.py  quick_plot.py  sensor_manager.py  sensor_manager_example.py  simple_ati_ft.py  simple_cybergear.py  simple_cybergear_somehow_working.py  simple_mark10_clean.py  simple_motor_position.py  simple_pretension.py  simple_vicon.py  simple_vicon_client.py  synchronized_acquisition.py  testMark10.cpp  testMark10.py  test_mark10_direct.py  test_vicon_connection.py  vicon_client.py
07102025-viconcodebackup/: readme.txt  vicon_client.py  vicon_tcp_server.py
20250918_codeNEW/: acquisition.py  sensor_ati_ft.py  simple_ati_ft.py  simple_motor_position.py  simple_vicon_client.py  synchronized_acquisition.py  tension_controlled_trajectories.py  test_minimal_motor.py  test_motor_diagnosis.py  vicon_client.py
Latex/: bibliography.bib  bibliography_Gotelli.bib  main.tex  main_old.tex  sensor_noise_table.tex
data/: motor_positions.csv  test_data.csv
data_collection/: acquisition.py  angela-appunti-07102025.txt  compare_correction.m  compute_cable_lenght.m  dataOptiTrack_straigth.csv  data_fbgs.asv  data_fbgs.m  data_optitrack.asv  data_optitrack.m  data_vicon.m  fft_circle_angle_150_speed_1.fig  fft_circle_angle_150_speed_3.fig  fft_plane_x_-y_angle_150_speed_1.fig  fft_plane_x_angle_150_speed_1.fig  fft_plane_x_angle_150_speed_3.fig  fft_plane_x_y_angle_150_speed_3fig.fig  fft_powerVicon.asv  fft_powerVicon.m  plot_robot_tip.m  process_data.asv  process_data.m  process_data_v2.m  process_data_v3.asv  process_data_v3.m  spectral_analysis.m  static_measures_sensors.m  video_data_vicon_FBGS.asv  video_data_vicon_FBGS.m
data_collection/sensors/gyros/: CMakeLists.txt  main.cpp  sparkfun_tcp_server.cpp
data_collection/sensors/gyros/build_old/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  sparkfun_ism330dhcx.vcxproj  sparkfun_tcp_server.vcxproj  sparkfun_tcp_server.vcxproj.filters
data_collection/sensors/gyros/build_old/.cmake/api/v1/reply/: codemodel-v2-71527962bceb4beb4894.json  index-2025-11-04T22-23-09-0702.json  target-ALL_BUILD-MinSizeRel-d1f705b505d8a7aeec99.json  target-ZERO_CHECK-RelWithDebInfo-641ed93fbb7e15fa7c32.json  target-sparkfun_ism330dhcx-Debug-4a8f9ad6bfe6fb296abe.json  target-sparkfun_tcp_server-RelWithDebInfo-f5828ac4fa25eb1ed592.json  target-sparkfun_tcp_server-Release-77b323c6deadd14517ed.json  target-test_ch341-RelWithDebInfo-d7b2579928a3bf8e3356.json  target-test_dll_functions-MinSizeRel-1edfcdb8fb7238a11343.json  target-test_dll_functions-Release-6556e03c946ae3c7874a.json  target-test_simple_unified-Debug-d41fbbd09dcff0cec051.json  target-test_simple_unified-RelWithDebInfo-fc3bc9989685dfab0a3b.json  target-test_simple_unified-Release-070275a72a0c93e88e14.json  target-test_unified_api-MinSizeRel-8f231c4ea9566d753969.json  target-test_unified_api-RelWithDebInfo-2444889bf04494a56f6b.json  target-test_unified_api-Release-b83e6dfea9bc93d76159.json
data_collection/sensors/gyros/build_old/delete/: sensor0.csv
data_collection/sensors/gyros/build_old/sparkfun_ism330dhcx.dir/Debug/: sparkfun_ism330dhcx.exe.recipe  sparkfun_ism330dhcx.ilk
data_collection/sensors/gyros/build_old/sparkfun_ism330dhcx.dir/Debug/sparkfun.D5A04D0D.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
data_collection/sensors/gyros/build_old/sparkfun_tcp_server.dir/Debug/: sparkfun_tcp_server.exe.recipe  sparkfun_tcp_server.ilk
data_collection/sensors/gyros/build_old/sparkfun_tcp_server.dir/Debug/sparkfun.9C7F5A73.tlog/: CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
data_collection/sensors/gyros/build_old/test/: sensor1.csv
data_collection/sensors/gyros/build_old/tests/: test_ch341.vcxproj.filters  test_dll_functions.vcxproj  test_simple_unified.vcxproj.filters
data_collection/sensors/gyros/build_old/tests/test_ch341.dir/Debug/: test_ch341.exe.recipe  test_ch341.ilk
data_collection/sensors/gyros/build_old/tests/test_ch341.dir/Debug/test_ch341.tlog/: CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog  link.write.1.tlog
data_collection/sensors/gyros/build_old/tests/test_dll_functions.dir/Debug/: test_dll_functions.ilk
data_collection/sensors/gyros/build_old/tests/test_dll_functions.dir/Debug/test_dll.019B427A.tlog/: CL.command.1.tlog  link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog
data_collection/sensors/gyros/build_old/tests/test_simple_unified.dir/Debug/test_sim.70943956.tlog/: CL.command.1.tlog  link.command.1.tlog
data_collection/sensors/gyros/build_old/tests/test_unified_api.dir/Debug/: test_unified_api.exe.recipe
data_collection/sensors/gyros/build_old/tests/test_unified_api.dir/Debug/test_unified_api.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.write.1.tlog
data_collection/sensors/gyros/build_old/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
data_collection/sensors/gyros/include/: Wire.h  gyro.h
data_collection/sensors/gyros/src/: gyro.cpp
data_collection/sensors/gyros/tests/: CMakeLists.txt  test_dll_functions.cpp
data_comparison/: characterization.asv  characterization.m  circular_trajectory.mat  computeGeneralisedStiffnessDampingMatrices.m  data_vicon.m  dynamicSimulationCosserat.m  elastic_gain.m  findStiffness.m  find_rod_state_NR.m  initializeStack.m  oscillation.m  parameters_dataset_robot.m  simple_simu.m  test_dynamic_release_dataset.asv  test_dynamic_release_dataset.m  test_trajectories.asv  test_trajectories.m  test_trajectories_IDM.m
old_messy_stuff/: angela-cose fatte 19092025.txt  mark10-motori associazione.txt  motor_controller_democheckMessageFrompycan.py  motor_tension_control.py  plot_sensor_data.py  print_tension_trajectories.py  (+1 more)
(+1054 files in other folders)
